issues fixed: images are not minifying and flickering on selection of folder

--- a/WebContent/styles/style.css
+++ b/WebContent/styles/style.css
@@ -12,8 +12,7 @@ body {
 	font-family: Helvetica Neue Light;
 	font-size: 14px;
 	font-weight: normal;
-    height: 40px;
-    width: 100%;
+    height: 30px;
     padding-top: 13px;
 }
 
